--- a/js/index.html
+++ b/js/index.html
@@ -4,6 +4,8 @@
 			<div class="logo"></div>
 			<div class="menu"></div>
 			<div class="user-profile"></div>
+
+			<p>This change was made in branch "new_branch"</p>
 		</nav>
 	</header>
 </body>
